# copilot

./: .gitignore  AGENTS.md  CHANGELOG.md  MEGING_PROJECTS_VOICEBOT_PLAN.md  MERGING_FRONTENDS_PLAN.md  README.md  RUNTIME.md  platforms.json  section  voice-categorization-ux-cleanup-plan.md
.agents/: product-marketing-context.md
.beads/: config.yaml  dolt-open-issues-backup-20260224.json  dolt-open-issues-import-20260224.jsonl  issues.jsonl  metadata.json
.desloppify/: plan.json  query.json  review_packet_blind.json  state-typescript.json  state-typescript.json.bak
.tmp/: responsibility-after.json  responsibility-before.json  responsibility-open-after-manual.json  responsibility-open-final.json  responsibility-open.json
agents/: README.md  docker-compose.yaml  ecosystem.config.cjs  fastagent.config.yaml  fastagent.secrets.yaml.example  pm2-agents.sh  pyproject.toml  run_fast_agent.py
agents/.fast-agent/sessions/2602111935-qDatQU/: history_generate_session_title.json  history_generate_session_title_previous.json  session.json
agents/.fast-agent/sessions/2602111938-QrIXHu/: history_generate_session_title.json  history_generate_session_title_previous.json  session.json
agents/.fast-agent/sessions/2602112007-rQHLja/: history_create_tasks.json  session.json
agents/agent-cards/: codex_deferred_review.md  create_tasks.md  generate_session_title.md  generate_session_title_send.md
app/: .env.development  .env.localhost  .env.production  .env.test.example  .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.json  vite.config.ts
backend/: .env.example  eslint.config.js  jest.config.cjs  notifies.hooks.yaml  package-lock.json  package.json  tsconfig.json
deploy/: README.md  nginx-host.conf
docs/: AGENTS_SESSION_HISTORY.md  ANALYSIS-reverse-links.md  ANALYSIS-tree-api-consistency.md  COPILOT_OPENAI_API_KEY_RUNTIME_STATE_2026-03-17.md  CREATE_TASKS_CONTEXT_OVERFLOW_PROFILING_2026-03-21.md  DESLOPPIFY_AGENT_GUIDE.md  FINANCES_BACKEND_PLAN.md  FINOPS_REALIZTION.md  FINOPS_SPEC_DISCOVERY.md  FIXING_COLLECTIONS_MESS_PLAN.md  MEGING_PROJECTS_VOICEBOT_PLAN.md  MERGING_ACT_GENERATION.md  MERGING_FRONTENDS_PLAN.md  MERGING_FRONTENDS_VOICEBOT.PLAN.md  MERGING_MINIAPP.md  MERGING_PROJECTS_PLAN.md  (+19 more)
voicebot_runtime/agents/: docker-compose.yaml  ecosystem.config.cjs  fastagent.config.yaml  fastagent.secrets.yaml.example  pm2-agents.sh  pyproject.toml
voicebot_runtime/agents/agent-cards/: create_tasks.md  generate_session_title.md
(+1616 files in other folders)
