[project]
name = "copilot-agents"
version = "0.1.0"
description = "Copilot Fast-Agent application for intelligent dialogue processing"
readme = "README.md"
requires-python = "<3.14,>=3.13.5"
dependencies = [
  "fast-agent-mcp==0.5.6",
]

[tool.uv]
package = true

[tool.uv.sources]
fast-agent-mcp = { git = "https://github.com/evalstate/fast-agent.git", rev = "e6c6b89a3991bbe6176dcd554fd14eb2ba216eae" }

# Optional convenience entry point if you later package this app:
[project.scripts]
copilot-agents = "agent:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent"]
