[project]
name = "copilot-agents"
version = "0.1.0"
description = "Copilot Fast-Agent application for intelligent dialogue processing"
readme = "README.md"
requires-python = "<3.14,>=3.13.5"
dependencies = [
  "fast-agent-mcp==0.5.6",
  "socksio>=1.0.0",
]

[tool.uv]
package = true

[tool.uv.sources]
fast-agent-mcp = { git = "https://github.com/strato-space/fast-agent.git", rev = "829d1c2cf7cd0b71b4b082d102fdbb3a8eddc32f" }

# Optional convenience entry point if you later package this app:
[project.scripts]
copilot-agents = "agent:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent"]
